# MultiLine2LineString

./: MultiLine2Line.py  Readme.md  main.py  pyproject.toml  requirements.txt
examples/: main_csv.py
